[workspace]
members = ["abi", "trading"]
resolver = "2"

[workspace.dependencies]
linera-sdk = "0.15.7"
async-graphql = { version = "7.0.17", default-features = false, features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt"] }