[package]
name = "ai-trading"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
linera-sdk = { path = "../linera-protocol/linera-sdk" }
serde = { version = "1.0", features = ["derive"] }
# Temporarily remove async-graphql to test WASM compatibility
# async-graphql = { version = "=7.0.17", default-features = false }

[[bin]]
name = "ai_trading_contract"
path = "src/contract.rs"

[[bin]]
name = "ai_trading_service"
path = "src/service.rs"
