[package]
name = "trade-history"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
async-graphql = "7.0.17"
linera-sdk = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "trade_history_contract"
path = "src/contract.rs"

[[bin]]
name = "trade_history_service"
path = "src/service.rs"
