[package]
name = "trading-counter"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
async-graphql = "7.0.17"
linera-sdk = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "trading_counter_contract"
path = "src/contract.rs"

[[bin]]
name = "trading_counter_service"
path = "src/service.rs"
