[workspace]
resolver = "2"
members = [
    "abi",
    "trading",
]

[workspace.dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = { version = "0.15.7" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

abi = { path = "./abi" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'